--- a/css/stile.css
+++ b/css/stile.css
@@ -3,6 +3,14 @@
     padding: 0;
     box-sizing: border-box;
 }
+header{
+    color: white;
+    background-color: orange;
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    z-index: 1;
+}
 img{
     display: block;
     max-width: 100%;
@@ -12,7 +20,30 @@ b{
 }
 .container{
     max-width: 1000px;
-    margin: 50px auto;
+    margin-bottom: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 100px;
+}
+.nav-container{
+    max-width: 1000px;
+    margin:0 auto;
+  
+}
+.navbar{
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.navbar > *{
+    flex-basis: 20%;
+}
+.navbar-logo{
+    flex-grow: 1;
+}
+.navbar-actions{
+    text-align: right;
 }
 .row{
     display: flex;
@@ -79,4 +110,8 @@ b{
 }
 .card:hover .img2{
     display: block;
+}
+#logo{
+    height: 40px;
+    margin-left: 180px;
 }
